<resources>
    <string name="app_name">Time Hacks</string>

    <string name="more_apps_url">Time Hacks</string>

    <!--Setting for adMob ads.... put true below to activate the ads-->
    <string name="showBannerAds">false</string>
    <string name="showInterstialAds">false</string>

    <string name="AdmobBannerAdsID">ca-app-pub-775800392558XXXX/639444XXXX</string>
    <string name="AdmobFullScreenAdsID">ca-app-pub-775800392558XXXX/124993XXXX</string>


    <!-- Update only package name-->
    <!-- Don't remove .FileProvider after package name-->
    <string name="authority">com.task.list.FileProvider</string>

    <string name="task_complete_msg">Task Completed</string>
    <string name="nodata_message">You don\'t have any task yet. \n Click + to add %s</string>
    <string name="swipe_to_delete">Swipe to delete</string>
    <string name="settings">Settings</string>
    <string name="select_theme">Select Theme</string>
    <string name="clear_data">Clear Data</string>
    <string name="rate_app">Rate App</string>
    <string name="share_app">Share App</string>
    <string name="more_apps">More Apps</string>
    <string name="invalid_time_error">Invalid Time</string>
    <string name="clear_data_msg">Do you want to clear data ?</string>
    <string name="item_subtitle_remaining">Remaining</string>
    <string name="item_subtitle_no_item">No Tasks</string>
    <string name="item_subtitle_all_done">All Done</string>
    <string name="notification_action_title">Mark as done</string>
    <string name="add_to_widget">Add To Widget</string>
    <string name="widget_empty_msg">You don\'t have any task yet.</string>
    <string name="add_category">Add Category</string>
    <string name="add_item">Add Item</string>


</resources>
